hphp/hack/test/typecheck/typedef14.php.exp
File "typedef14.php", line 15, characters 17-17:
Encountered unexpected token '0'. (Parsing[1002])
